# UAV-RPI_Beacon-AutoNav

./: README.md
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/pozyx_simulation/: uwb_data.h
devel/include/test_simulation_description/: uwb_data.h
devel/include/uav_simulation_description/: uwb_data.h
devel/lib/pkgconfig/: pozyx_simulation.pc  search_target_description.pc  test_simulation_description.pc  uav_simulation_description.pc
devel/share/pozyx_simulation/cmake/: pozyx_simulation-msg-paths.cmake  pozyx_simulationConfig.cmake
devel/share/roseus/ros/pozyx_simulation/: manifest.l
devel/share/roseus/ros/test_simulation_description/: manifest.l
devel/share/roseus/ros/uav_simulation_description/: manifest.l
devel/share/search_target_description/cmake/: search_target_descriptionConfig.cmake
devel/share/test_simulation_description/cmake/: test_simulation_description-msg-paths.cmake  test_simulation_descriptionConfig.cmake
devel/share/uav_simulation_description/cmake/: uav_simulation_description-msg-extras.cmake  uav_simulation_description-msg-paths.cmake  uav_simulation_descriptionConfig.cmake
ros_packages/px4_based/aut_opp/: CMakeLists.txt  README.md  package.xml
ros_packages/px4_based/aut_opp/cfg/: config.rviz
ros_packages/px4_based/aut_opp/gazebo_model/media/materials/scripts/: ar_tag_0.material  ar_tag_1.material  ar_tag_12.material  ar_tag_3.material
ros_packages/px4_based/aut_opp/gazebo_model/models/ar_tag_0/: ar_tag_0.sdf
ros_packages/px4_based/aut_opp/include/: circle.h  land_drone.h  store.h
ros_packages/px4_based/aut_opp/launch/: manual_control.launch  spawn_model.launch
ros_packages/px4_based/aut_opp/scripts/: FramesPublisher.py
ros_packages/px4_based/aut_opp/src/: control.cpp  control_node.cpp  land_drone_node.cpp  start.cpp  store_artag_node.cpp
ros_packages/px4_based/aut_opp_msgs/: CMakeLists.txt  package.xml
ros_packages/px4_based/aut_opp_msgs/action/: Start.action
ros_packages/px4_based/fox_cart_description/: CMakeLists.txt
ros_packages/px4_based/fox_cart_description/urdf/: base_fox_cart.gazebo.xacro  base_fox_cart.urdf.xacro  base_fox_cart_big_top.urdf.xacro  base_fox_cart_verticaltag.urdf.xacro  wheel.urdf.xacro
ros_packages/tello_dobots/control_rosparam/src/: control_rosparam_node.cpp
ros_packages/tello_dobots/control_tello/: CMakeLists.txt  package.xml
ros_packages/tello_dobots/control_tello/cfg/: default.rviz
ros_packages/tello_dobots/control_tello/include/: move_drone.h
ros_packages/tello_dobots/control_tello/launch/: driver.launch  main.launch
ros_packages/tello_dobots/control_tello/scripts/: detect_aruco.py  flock_driver.py  tf_listener.py
ros_packages/tello_dobots/control_tello/src/: control.cpp  move_drone.cpp
ros_packages/tello_dobots/control_tello_msgs/: CMakeLists.txt
ros_packages/tello_dobots/simulation_tello/: CMakeLists.txt  package.xml
ros_packages/tello_dobots/simulation_tello/cfg/: config.rviz
ros_packages/tello_dobots/simulation_tello/launch/: simulation.launch  spawn_cart.launch  spawn_iris.launch  spawn_sdf.launch  start_mavros.launch
ros_packages/tello_dobots/tello_description/: CMakeLists.txt  package.xml
src/search_target_description/: CMakeLists.txt
src/search_target_description/bashscripts/: launch_sim_setup.sh  launch_test_script.sh
src/search_target_description/launch/: bringup_uav_rover.launch  start_gazebo_uav_world.launch
src/test_simulation_description/: CMakeLists.txt
src/test_simulation_description/bashscripts/: arm_uav.sh  launch_sim_setup.sh  launch_test_script.sh
src/test_simulation_description/launch/: .rviz.launch.swp  bringup_uav_platform.launch  rviz.launch  spawn_platform.launch  spawn_uav.launch  start_gazebo_uav_test_world.launch
src/test_simulation_description/src/: FLY_test_1.py  FLY_test_2.py  test_simulation.py  uwb_simulation.py
src/uav_simulation_description/: CMakeLists.txt  package.xml
src/uav_simulation_description/bashscripts/: launch_test_script.sh
src/uav_simulation_description/gazebo_model/worlds/: basic_world.world
src/uav_simulation_description/launch/: spawn_platform.launch  start_gazebo_uav_word-1.launch  start_simulation.launch
uwb_uav_simulation_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
uwb_uav_simulation_ws/devel/include/uav_simulation_description/: uwb_data_raw.h
uwb_uav_simulation_ws/devel/include/uwb_localization_description/: position_data_uwb.h  uwb_data_raw.h
uwb_uav_simulation_ws/devel/lib/pkgconfig/: uav_simulation_description.pc  uwb_localization_description.pc
uwb_uav_simulation_ws/ros_packages/: README.md
uwb_uav_simulation_ws/ros_packages/px4_based/: README.md
uwb_uav_simulation_ws/ros_packages/px4_based/aut_opp_msgs/: README.md
uwb_uav_simulation_ws/ros_packages/px4_based/fox_cart_description/: package.xml
uwb_uav_simulation_ws/ros_packages/tello_dobots/: README.md
uwb_uav_simulation_ws/ros_packages/tello_dobots/control_rosparam/: CMakeLists.txt  README.md  package.xml
uwb_uav_simulation_ws/ros_packages/tello_dobots/control_tello/: README.md
uwb_uav_simulation_ws/ros_packages/tello_dobots/control_tello_msgs/: README.md  package.xml
uwb_uav_simulation_ws/ros_packages/tello_dobots/simulation_tello/: README.md
uwb_uav_simulation_ws/src/uav_simulation_description/: CMakeLists.txt
uwb_uav_simulation_ws/src/uav_simulation_description/bashscripts/: launch_sim_setup.sh
uwb_uav_simulation_ws/src/uav_simulation_description/launch/: spawn_uav.launch  start_mavros.launch  start_simulation.launch
uwb_uav_simulation_ws/src/uav_simulation_description/src/: FLY_circle_1.py  uwb_simulation_publisher.py
uwb_uav_simulation_ws/src/uwb_localization_description/: CMakeLists.txt  package.xml
uwb_uav_simulation_ws/src/uwb_localization_description/launch/: start_testscripts.launch
uwb_uav_simulation_ws/src/uwb_localization_description/msg/: position_data_uwb.msg
uwb_uav_simulation_ws/src/uwb_localization_description/src/: estimated_position_broadcaster.py  uwb_localization_publisher.py  uwb_measurement_publisher.py  uwb_simulation_publisher.py
(+105 files in other folders)
