<?xml version="1.0"?>
<package format="2">
  <name>control_tello</name>
  <version>0.0.0</version>
  <description>The control_tello package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="boots@todo.todo">boots</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>TODO</license>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
		
	<depend>actionlib</depend>	
  	<depend>cv_bridge</depend> 
  	<depend>flock_msgs</depend> 
  	<depend>rospy</depend> 
  	<depend>sensor_msgs</depend> 
  	<depend>std_msgs</depend> 

  	<build_depend>actionlib_msgs</build_depend>	
  	<build_depend>control_tello_msgs</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>geometry_msgs</build_depend>

	<exec_depend>message_runtime</exec_depend>	
	<exec_depend>actionlib_msgs</exec_depend>
	<exec_depend>control_tello_msgs</exec_depend>
	<exec_depend>message_generation</exec_depend>
 	<exec_depend>roscpp</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>

	<build_export_depend>message_runtime</build_export_depend>
	<!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
